--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,18 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*"
+        "phpunit/phpunit": "^6.0",
+        "friendsofphp/php-cs-fixer": "^2.11",
+        "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
         "psr-4": {
-            "Jhartell\\Hexdump\\" : "src/"
+            "Jhartell\\Hexdump\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Jhartell\\Hexdump\\" : "tests/"
+            "Jhartell\\Hexdump\\Tests\\": "tests/"
         }
     }
 }
