--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "friendsofphp/php-cs-fixer": "^2.11",
+        "phpunit/phpunit": "^5.0",
+        "friendsofphp/php-cs-fixer": "^2.10",
         "squizlabs/php_codesniffer": "^3.2"
     },
     "autoload": {
